<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeScreen">

    <Button
        android:id="@+id/btn_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INVITE"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>