<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qr_code_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QRCodeInviteScreen">

    <!-- Top bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navy_blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title=" "
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_qr_code"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="25dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>